# finest-data-subnet

./: .env.sample  .gitignore  CONTRIBUTING.md  README.md  min_compute.yml  punkt_download.py  roadmap.md  setup.py  upload_to_hub.py
data_refine/api/: dummy.py
data_refine/base/: miner.py  neuron.py  validator.py
data_refine/validator/: forward.py
docs/: datatrove.md  evaluation.md  miner.md  upload_from_s3_to_hf.md  validator.md
example/: fineweb.py
miner/: commit_to_chain.py  fineweb.py  main.py  move.py  pyproject.toml  requirements.txt  upload_to_hf.py  upload_to_hub.py
miner/miner/: check_slurm.py  commit_to_chain.py  generate.py  get_task.py  logger_config.py  main.py  refining_dataset.py  upload_to_hf.py  utils.py
neurons/: miner.py  validator.py
scripts/: start_validator.py
tests/: test_template_validator.py
utilities/: utils.py
validator/: config.py  main.py  pyproject.toml  requirements.txt  setup_environments.sh  template.yaml
validator/fetch_commit/: README.md  main.py  pyproject.toml  report_score.py  utils.py  wandb_logger.py  weight_setter.py
validator/process_commit/: README.md  calculate.py  check_similarity.py  config.py  config.yaml  evaluate.py  main.py  pyproject.toml  test.py  train.py  utils.py
validator/training/: test.py
validator/validator/: config.py  config.yaml  evaluate.py  main.py  train.py
validator/validator/fetch_commit/: pyproject.toml
validator/validator/process_commit/: main.py  pyproject.toml  utils.py
validator/validator/training/: check.py
verify/: get_commit.py
