[tool.poetry]
name = "miner"
version = "0.1.0"
description = ""
authors = ["Ben <ben.amwithyou@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bittensor = "^8.5.1"
datatrove = {extras = ["all"], version = "^0.4.0"}
nltk = "^3.9.1"
tokenizers = "^0.21.0"
faust-cchardet = "^2.1.19"
python-magic = "^0.4.27"
warcio = "^1.7.5"
s3fs = "^2024.6.1"
orjson = "^3.10.13"
pyahocorasick = "^2.1.0"
fasteners = "^0.19"
tldextract = "^5.1.3"
trafilatura = ">=1.8.0,<1.12.0"
spacy = "^3.8.3"
xxhash = "^3.5.0"
fasttext-numpy2-wheel = "^0.9.2"
datasets = "^3.2.0"
python-dotenv = "^1.0.1"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
