[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
absl-py = "2.1.0"
aenum = "3.1.15"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.9"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
ansible = "6.7.0"
ansible-core = "2.13.13"
ansible-vault = "2.1.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
backoff = "2.2.1"
base58 = "2.1.1"
blis = "0.7.11"
catalogue = "2.0.10"
certifi = "2024.2.2"
cffi = "1.17.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpathlib = "0.16.0"
colorama = "0.4.6"
confection = "0.1.5"
cryptography = "42.0.8"
cymem = "2.0.8"
cytoolz = "0.12.3"
dacite = "1.8.1"
dataproperty = "1.0.1"
dill = "0.3.8"
ecdsa = "0.19.0"
einops = "0.8.0"
eth-keys = "0.5.1"
eth-typing = "5.0.0"
eth-utils = "2.2.2"
exceptiongroup = "1.2.2"
fastapi = "0.110.3"
filelock = "3.15.4"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
fuzzywuzzy = "0.18.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
h11 = "0.14.0"
huggingface-hub = "0.24.6"
idna = "3.7"
jinja2 = "3.1.4"
joblib = "1.4.2"
langcodes = "3.4.0"
language-data = "1.2.0"
levenshtein = "0.25.1"
lighteval = {git = "https://github.com/huggingface/lighteval", rev = "cf87de993bf5f90120f8d630cc7bbcedd02bcd4c"}
lxml = "5.3.0"
marisa-trie = "1.2.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mbstrdecoder = "1.1.3"
mdurl = "0.1.2"
more-itertools = "10.4.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
msgpack-numpy-opentensor = "0.5.0"
multidict = "6.0.5"
multiprocess = "0.70.16"
munch = "2.5.0"
murmurhash = "1.0.10"
nest-asyncio = "1.6.0"
netaddr = "1.3.0"
networkx = "3.3"
nltk = "3.8.1"
numpy = "1.26.4"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.18.1"
nvidia-nvjitlink-cu12 = "12.6.20"
nvidia-nvtx-cu12 = "12.1.105"
packaging = "24.1"
pandas = "2.2.2"
password-strength = "0.0.3.post2"
pathvalidate = "3.2.0"
portalocker = "2.10.1"
preshed = "3.0.9"
protobuf = "3.20.3"
py = "1.11.0"
py-bip39-bindings = "0.1.11"
py-ed25519-zebra-bindings = "1.0.1"
py-sr25519-bindings = "0.2.0"
pyarrow = "17.0.0"
pycountry = "24.6.1"
pycparser = "2.22"
pycryptodome = "3.20.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pygments = "2.18.0"
pynacl = "1.5.0"
pytablewriter = "1.2.0"
python-dateutil = "2.9.0.post0"
python-levenshtein = "0.25.1"
python-statemachine = "2.1.2"
pytz = "2024.1"
pyyaml = "6.0.2"
rapidfuzz = "3.9.6"
regex = "2024.7.24"
requests = "2.32.3"
resolvelib = "0.8.1"
retry = "0.9.2"
rich = "13.7.1"
rouge-score = "0.1.2"
sacrebleu = "2.4.3"
safetensors = "0.4.4"
scalecodec = "1.2.11"
scikit-learn = "1.5.1"
scipy = "1.14.0"
sentencepiece = "0.2.0"
shtab = "1.6.5"
six = "1.16.0"
smart-open = "6.4.0"
smmap = "5.0.1"
sniffio = "1.3.1"
spacy = "3.7.2"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
srsly = "2.4.8"
starlette = "0.37.2"
substrate-interface = "1.7.10"
sympy = "1.13.2"
tabledata = "1.3.3"
tabulate = "0.9.0"
tcolorpy = "0.1.6"
tensorboardx = "2.6.2.2"
termcolor = "2.3.0"
thinc = "8.2.5"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
toolz = "0.12.1"
torch = "2.1.2"
tqdm = "4.66.5"
transformers = "4.44.0"
triton = "2.1.0"
typepy = "1.3.2"
typer = "0.9.4"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uvicorn = "0.30.0"
wasabi = "1.1.3"
weasel = "0.3.4"
websocket-client = "1.8.0"
xxhash = "3.5.0"
yarl = "1.9.4"
nanotron = { git = "https://github.com/huggingface/nanotron.git", rev = "03d67f2103d5be0dc15ea6022a6cf16d6a633064" }
bittensor = "^7.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
