[tool.poetry]
name = "fetch-commit"
version = "0.1.0"
description = ""
authors = ["barneylogo <ben.amwithyou@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bittensor = "^8.5.1"
redis = "^5.2.1"
colorama = "^0.4.6"
wandb = "^0.19.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
