[tool.poetry]
name = "process-commit"
version = "0.1.0"
description = ""
authors = ["barneylogo <ben.amwithyou@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.2.1"
requests = "^2.32.3"
warcio = "^1.7.5"
boto3 = "^1.35.97"
pandas = "^2.2.3"
datasets = "^3.2.0"
nltk = "^3.9.1"
tokenizers = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
